--- a/package.json
+++ b/package.json
@@ -9,22 +9,26 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-ethers": "^2.1.1",
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^3.4.2",
     "@uniswap/smart-order-router": "^2.5.30",
-    "@uniswap/v3-periphery": "^1.4.3",
+    "@uniswap/v3-periphery": "^1.0.1",
+    "@uniswap/v3-sdk": "^3.9.0",
     "autoprefixer": "10.4.14",
     "axios": "^1.5.0",
+    "bignumber.js": "^9.1.0",
+    "ethereum-waffle": "^3.4.4",
     "ethers": "5.7.2",
+    "jsbi": "^3.2.5",
     "next": "13.3.0",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.1",
-    "web3modal": "^1.9.12"
+    "web3modal": "^1.9.9"
   },
   "devDependencies": {
-    "@nomicfoundation/hardhat-toolbox": "^2.0.0",
-    "hardhat": "^2.14.0",
     "hardhat-tracer": "^2.6.0"
   }
 }
